2003-01-21  Darin Adler  <darin@apple.com>

        Everything else reviewed by Maciej, dtd.cpp and htmlparser.cpp changes reviewed by Dave.

	- fixed 3151098 -- REGRESSION: Frequent assert about renderer in DOM code

        * khtml/html/dtd.cpp: (DOM::checkChild): Disallow text inside colgroup so it can be handled as a special case
	inside the parser.
        * khtml/html/htmlparser.cpp: (KHTMLParser::insertNode): Discard text inside colgroup and don't pop the colgroup.

	- fixed 3149792 -- memory trasher at robinlionheart.com
	- fixed 3150664 -- failed assertion in HTMLFrameSetElementImpl::attach on page with frameset inside frameset

	The key to fixing the 3149792 memory trasher was to avoid constructing trees where there
	is a render object nested inside an object that is not a suitable container. In particular,
	the code assumed that RenderFlow objects would only be inside other RenderFlow objects, and
	this does not happen if you have an <object> that is an image, with objects inside it that
	are intended to be used if the image fails to load.

	The key to fixing the 3150664 assertion was to handle the case where a frame set's parent
	didn't have a renderer, rather than just asserting about it.

        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layout): Added an assertion and a FIXME from Dave's and my review of this code.
        (RenderFlow::splitInlines): Add assertions that we have actual RenderFlow objects. Casting
	non-RenderFlow objects was the cause of the memory trashing. The other parts of this change
	assure we never hit these assertions by not creating any render objects for DOM objects
	that are inside non-RenderFlow.
        (RenderFlow::addChildWithContinuation): Add a similar assertion here.

        * khtml/rendering/render_object.h: Declare new member function.
        * khtml/rendering/render_object.cpp: (RenderObject::canHaveChildren): Return false.
        * khtml/rendering/render_container.h: Declare new member function.