@@ -404,7 +404,6 @@ bool KHTMLPart::openURL( const KURL &url )
 
         d->m_bComplete = true;
         d->m_doc->setParsing(false);
-        d->m_doc->setLoading(false);
 
         kdDebug( 6050 ) << "completed..." << endl;
         emit completed();
@@ -520,7 +519,6 @@ bool KHTMLPart::closeURL()
     kdDebug( 6050 ) << " was still parsing... calling end " << endl;
     slotFinishedParsing();
     d->m_doc->setParsing(false);
-    d->m_doc->setLoading(false);
   }
 
   if ( !d->m_workingURL.isEmpty() )
@@ -1412,7 +1410,6 @@ void KHTMLPart::begin( const KURL &url, int xOffset, int yOffset )
 #endif
 
   d->m_doc->setParsing(true);
-  d->m_doc->setLoading(true);
 }
 
 void KHTMLPart::write( const char *str, int len )
@@ -1626,7 +1623,6 @@ void KHTMLPart::checkCompleted()
   // OK, completed.
   // Now do what should be done when we are really completed.
   d->m_bComplete = true;
-  d->m_doc->setLoading(false);
 
   checkEmitLoadEvent(); // if we didn't do it before
 
@@ -1686,7 +1682,7 @@ void KHTMLPart::checkCompleted()
 
 void KHTMLPart::checkEmitLoadEvent()
 {
-  if ( d->m_bLoadEventEmitted || !d->m_doc || d->m_doc->parsing() || d->m_doc->loading() ) return;
+  if ( d->m_bLoadEventEmitted || !d->m_doc || d->m_doc->parsing() ) return;
 
   ConstFrameIt it = d->m_frames.begin();
   ConstFrameIt end = d->m_frames.end();
@@ -2833,10 +2829,6 @@ bool KHTMLPart::processObjectRequest( khtml::ChildFrame *child, const KURL &_url
 
     if ( child->m_type != khtml::ChildFrame::Object )
     {
-      d->m_bComplete = false;
-      d->m_bLoadEventEmitted = false;
-      d->m_doc->setLoading(true);
-
       connect( part, SIGNAL( started( KIO::Job *) ),
                this, SLOT( slotChildStarted( KIO::Job *) ) );
       connect( part, SIGNAL( completed() ),
@@ -3245,7 +3237,7 @@ void KHTMLPart::slotChildStarted( KIO::Job *job )
       emit d->m_extension->openURLNotify();
     }
 #endif
-
+    d->m_bComplete = false;
     emit started( job );
   }
 }
